Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102412

tst_qbluetoothlocaldevice::tst_pairDevice doesn't pass in manual mode on Windows

    XMLWordPrintable

Details

    • Windows
    • 6e4415588c (qt/qtconnectivity/dev) 6e4415588c (qt/tqtc-qtconnectivity/dev)

    Description

      tst_qbluetoothlocaldevice::tst_pairDevice doesn't pass in manual mode on Windows.

      Manual mode here means that the BT_TEST_DEVICE environment variable is set, which means manual pairing interaction with another device.

      At this point it is not certain why there are fails, but there are some suspicions:

      • requestPairing's pairingFinished() signal and pairingStatus() seem to give different pairing statuses
      • sometimes pairing operation results in "AlreadyPaired" status from Windows, but since the code only expects "Paired" for successful case, it is interpreted as an error

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes