Bluetooth pairing mode improvements on Windows

Windows QBluetoothLocalDevice does not distinguish between "Paired"
and "AuthorizedPaired" pairing modes as there does not seem to be
APIs to do it.

The current implementation has few shortcomings addressed by this
commit:
- Document the behavior
- Use the actual pairing mode as signal value instead of using
  what was requested. On current implementation the "pairingFinished()"
  signal and "pairingStatus()" method call may give different values
- Perform pairing/unparing only if this could mean a change; requesting
  'Paired' is same as requesting 'AuthorizedPaired'

Fixes: QTBUG-102412
Change-Id: I57801744432978c70cfdba5e58e8f85acfab92f2
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>